--- a/temukan-barang.html
+++ b/temukan-barang.html
@@ -62,7 +62,7 @@
                                 <p style="text-align: center;">Temukan barang Anda yang hilang!</p>
 							</div>
 							<div class="col-sm-4 container mt-1">
-								<a href="menemukan.html" style="text-decoration: none;">
+								<a href="menemukan-info.html" style="text-decoration: none;">
 									<img src="assets/img/found.png" alt="FOUND" width="400px" style="float: left;">
 									<h2 class="mt-1 head-color" style="font-weight: 900; text-align: center;">FOUND</h2>
 								</a>
