--- a/menemukan-info.html
+++ b/menemukan-info.html
@@ -97,7 +97,7 @@
                                         </div>
 
                                         <p class="mb-5 pb-lg-2" style="color: #393f81">
-                                            Tidak apa yang Anda lakukan?
+                                            Tidak tau apa yang Anda lakukan?
                                             <a href="help.html" style="color: #393f81"> Help!</a>
                                         </p>
                                     </form>
