--- a/register.html
+++ b/register.html
@@ -12,8 +12,8 @@
   <title>Register | LOSTANDFOUND</title>
 </head>
 
-<body>
-  <section class="vh-100" style="background-color: #f9a826">
+<body style="background-color: #f9a826;">
+  <section class="vh-100" style="background-color: #f9a826;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-xl-10">
