--- a/menemukan-info.html
+++ b/menemukan-info.html
@@ -53,9 +53,9 @@
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem">
                         <div class="row g-0">
+                            <!-- Image Upload Section -->
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <!-- Image Upload -->
-                                <div class="Neon Neon-theme-dragdropbox pt-7 d-block mx-auto">
+                                <div class="Neon Neon-theme-dragdropbox pt-7 d-block mx-auto" style="padding-left: 30px;">
                                     <input
                                         style="z-index: 999; opacity: 0; width: 320px; height: 200px; position: absolute; right: 0px; left: 0px; margin-right: auto; margin-left: auto;"
                                         name="files[]" id="filer_input2" multiple="multiple" type="file">
@@ -71,6 +71,8 @@
                                 </div>
 
                             </div>
+
+                            <!-- Informasi Penemu Section -->
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
                                     <form>
